--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -16,9 +16,9 @@ go_register_toolchains()
 
 git_repository(
     name = "com_github_virustotal_yara",
-    commit = "8c52108caee9cd86bed3c1f83ef8688ee6cc6336",
+    commit = "e8ddf330618e21952e868ab6ad0337a3b7729d73",
     remote = "https://github.com/VirusTotal/yara",
-    shallow_since = "1583757755 +0100"
+    shallow_since = "1584118987 -0700"
 )
 
 load("@com_github_virustotal_yara//:bazel/yara_deps.bzl", "yara_deps")
