--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -16,9 +16,9 @@ go_register_toolchains()
 
 git_repository(
     name = "com_github_virustotal_yara",
-    commit = "e8ddf330618e21952e868ab6ad0337a3b7729d73",
+    commit = "fd8145c69cce7b40d7e8ca719214de253b1e7913",
     remote = "https://github.com/VirusTotal/yara",
-    shallow_since = "1584118987 -0700"
+    shallow_since = "1584469379 +0100"
 )
 
 load("@com_github_virustotal_yara//:bazel/yara_deps.bzl", "yara_deps")
